# Android-Memory-Editor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
inc/: ame_file.h  ame_logger.h  ame_memory.h  ame_process.h  ame_system.h
include/: ame_file.h  ame_logger.h  ame_memory.h  ame_process.h
src/: ame_memory.cpp  ame_process.cpp  ame_system.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
